Finished Sprint 2 , with JUnit testing and job entity